[package]
name = "kvs"
version = "0.1.0"
authors = ["Guanduo Mu <muguanduo@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = "4.5.11"
failure = "0.1.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
bytes = "1.7.1" 

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
