[package]
name = "kvs"
version = "0.1.0"
authors = ["Guanduo Mu <muguanduo@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = "4.5.11"
failure = "0.1.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
bytes = "1.7.1" 
slog = "2.7.0" 
slog-term = "2.9.1"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1" 
log = "0.4.22"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"